--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,13 @@ name = "AoC24"
 uuid = "59465199-a84a-46fc-9d3d-e3308c765ea3"
 authors = ["Valentin <stauber.valentin@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+
+[compat]
+CSV = "0.10.15"
+DataFrames = "1.7.0"
+DataStructures = "0.18.20"
